--- a/reactProject/src/App.css
+++ b/reactProject/src/App.css
@@ -4,3 +4,11 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+.container{
+  width: 1400px;
+  margin: 0 auto;
+}
+.row{
+  display: flex;
+  flex-wrap: wrap;
+}
