--- a/reactProject/src/components/Navbar/_Navbar.scss
+++ b/reactProject/src/components/Navbar/_Navbar.scss
@@ -1,18 +1,22 @@
 
 .navbar{
     width:100% ;
-    padding: 30px 50px;
+    padding: 30px ;
     display: flex;
     align-items: center;
     justify-content: space-around;
-    position: fixed;
+  max-height: 100px;
    z-index: 10;
-   background-color: #fff;
+   background-color: #f9f6f6;
+   
+  
+ 
     .navbar-links{
 ul{
     display: flex;
     gap: 16px;
     list-style: none;
+   
     a{
             display: flex;
             color: black;
@@ -26,10 +30,21 @@ ul{
         display: flex;
         gap: 16px;
         
+        
         button{
-            padding: 12px 28px;
+            padding: 12px 20px;
             border-radius: 8px;
             font-size: 16px;
+            display: flex;
+            gap: 5px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            a{
+                color: black;
+                text-decoration: none;
+            }
+            
         }
     }
 }
