--- a/reactProject/src/pages/_Home.scss
+++ b/reactProject/src/pages/_Home.scss
@@ -1,39 +1,42 @@
 #home-image {
     position: relative;
     width: 100%;
-    height: 100vh; // Ekranın hündürlüyünü tam əhatə edəcək
+    height: 80vh; 
+
+   
    img {
       width: 100%;
-      height: auto;
+      height: 100%; 
+      object-fit: cover; 
       position: absolute;
       z-index: 1;
-      margin-top: 100px;
+     
+     
       
     }
-  }
- .home-image-text {
-    position: absolute;
-    top: 50%;
-    left: 40%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    color: white;
-    line-height: 50px;
-    h1 {
-      font-size: 3em;
-   }
-   p {
-      font-size: 1.2em;
+    .home-image-text {
+      position: absolute;
+      top: 50%;
+      left: 40%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      color: white;
+      line-height: 50px;
+      h1 {
+        font-size: 3em;
+     }
+     p {
+        font-size: 1.2em;
+      }
     }
   }
+ 
 
-  #about-us{
-   text-align: center;
-.about-heading{
-   font-size: 30px;
-}
-   .about-text{
-     font-size: 15px;
-   }
-  }
   
+
+  
+    
+
+
+    
+    
