--- a/reactProject/src/pages/Card/_Card.scss
+++ b/reactProject/src/pages/Card/_Card.scss
@@ -1,39 +1,127 @@
-
-.Card-storage{
-   h1{
-    text-align: center;
-    font-size:44px;
-
-    margin-top: 40px;
-   }
-    .card-window{
-        
-        text-align: center;
-        background-color: rgb(246, 245, 245);
-        padding: 130px 0;
-        margin: 50px 0;
+.Card-storage {
+    .card-window-empty{
+        background-color: rgb(245, 247, 247);
+        padding: 80px 100px;
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-       
-        h1{
-            font-size: 50px;
-        }
-        
-        .navigation{
-            padding: 10px 40px;
-            border-radius: 5px;
-            font-size: 18px;
-            margin-top:20px ;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 5px;
-            a{
-                text-decoration: none;
-                color: inherit;
-            }
-        }
+        margin: 20px 0;
+
+        .navigation {
+         padding: 10px 40px;
+         border-radius: 5px;
+         font-size: 18px;
+         margin-top: 20px;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         gap: 5px;
+     
+         a {
+           text-decoration: none;
+           color: black;
+         }
+       }
+       }
+    
+    h1 {
+      text-align: center;
+      font-size: 44px;
+      margin-top: 40px;
     }
-}
+  
+    .card-window {
+      text-align: center;
+      background-color: rgb(246, 245, 245);
+      padding: 50px 20px;
+      margin: 50px 0;
+      display: flex;
+      justify-content: center;
+      align-items:center;
+      flex-wrap: wrap; 
+   
+    }
+  
+    .card-window-products {
+      display: flex;
+      
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+      width: 60%;  
+      max-width: 650px; 
+      padding-right: 20px; 
+    }
+  
+    .card-window-summary {
+      width: 35%; 
+      border: 1px solid black;
+      padding: 30px 50px;
+      text-align: left;
+  
+      .summary-head {
+        border-bottom: 1px solid black;
+        padding-bottom: 10px;
+        margin-bottom: 20px;
+      }
+    }
+  
+    .cart-item {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+     
+      padding: 10px;
+      border-radius: 5px;
+  
+      img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 5px;
+      }
+  
+      .cart-item-details {
+       
+        text-align: left;
+        
+  
+        h3 {
+          margin: 0;
+          font-size: 1.2rem;
+        }
+  
+        p {
+          margin: 5px 0;
+          font-size: 1rem;
+        }
+  
+        .quantity-controls {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+  
+          button {
+            width: 30px;
+            height: 30px;
+            font-size: 1.2rem;
+            border: 1px solid #ddd;
+            background: none;
+            border-radius: 5px;
+            cursor: pointer;
+  
+            &:hover {
+              background: #f5f5f5;
+            }
+          }
+  
+          span {
+            font-size: 1.2rem;
+          }
+        }
+      }
+    }
+  }
+  
