--- a/reactProject/src/components/ProductsButton/_ProductsButton.scss
+++ b/reactProject/src/components/ProductsButton/_ProductsButton.scss
@@ -1,17 +1,27 @@
-.section-links{
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   gap: 10px;
+.section-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
     margin: 40px 0;
-
-    button{
-        padding: 10px 20px;
-        border-radius: 5px;
-        font-size: 16px;
-        background-color: white;
-        cursor: pointer;
-
+  
+    button {
+      padding: 10px 20px;
+      border-radius: 5px;
+      font-size: 16px;
+      background-color: white;
+      cursor: pointer;
+      border: 1px solid #ccc;
+  
+      &.active {
+        background-color: #000;
+        color: #fff;
+      }
+  
+      &:hover {
+        background-color: #8b8787;
         
+      }
     }
-}
+  }
+  
