--- a/reactProject/src/pages/Card/_Card.scss
+++ b/reactProject/src/pages/Card/_Card.scss
@@ -1,127 +1,168 @@
 .Card-storage {
-    .card-window-empty{
-        background-color: rgb(245, 247, 247);
-        padding: 80px 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
-        margin: 20px 0;
-
-        .navigation {
-         padding: 10px 40px;
-         border-radius: 5px;
-         font-size: 18px;
-         margin-top: 20px;
-         display: flex;
-         justify-content: center;
-         align-items: center;
-         gap: 5px;
-     
-         a {
-           text-decoration: none;
-           color: black;
-         }
-       }
-       }
+  h1{
+    text-align: center;
+    margin:30px 0 ;
+    font-size: 40px;
+  }
+  .card-window-empty{
+    background-color: rgb(245, 247, 247);
+    padding: 80px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 20px 0;
     
-    h1 {
-      text-align: center;
-      font-size: 44px;
-      margin-top: 40px;
+
+    .navigation {
+     padding: 10px 40px;
+     border-radius: 5px;
+     font-size: 18px;
+     margin-top: 20px;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     gap: 5px;
+ 
+     a {
+       text-decoration: none;
+       color: black;
+     }
+   }
+   }
+  .card-window {
+    text-align: center;
+    
+    padding: 50px 20px;
+    margin: 50px 0;
+    display: flex;
+    justify-content: space-between; 
+    align-items: flex-start; 
+    flex-wrap: wrap;
+  }
+
+  .card-window-products {
+    
+    display: flex;
+    flex-direction: column; 
+    align-items: flex-start; 
+    gap: 50px;
+    width: 65%; 
+    padding-left: 30px;
+    border: 1px solid black;
+    border-radius: 10px;
+
+  }
+
+  .card-window-summary {
+    width: 30%;
+    border: 1px solid black;
+    padding: 30px 0;
+    text-align: left;
+    border-radius: 10px;
+    height: 250px;
+    line-height: 35px;
+    
+    .summary-calculate{
+     margin: 0 15px;
     }
-  
-    .card-window {
-      text-align: center;
-      background-color: rgb(246, 245, 245);
-      padding: 50px 20px;
-      margin: 50px 0;
-      display: flex;
-      justify-content: center;
-      align-items:center;
-      flex-wrap: wrap; 
    
-    }
-  
-    .card-window-products {
-      display: flex;
-      
-      justify-content: center;
-      align-items: center;
-      gap: 20px;
-      width: 60%;  
-      max-width: 650px; 
-      padding-right: 20px; 
-    }
-  
-    .card-window-summary {
-      width: 35%; 
-      border: 1px solid black;
-      padding: 30px 50px;
-      text-align: left;
-  
-      .summary-head {
-        border-bottom: 1px solid black;
-        padding-bottom: 10px;
-        margin-bottom: 20px;
-      }
-    }
-  
-    .cart-item {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
-     
-      padding: 10px;
+    button{
+      padding: 10px 130px;
+      background-color: black;
+      color: white;
       border-radius: 5px;
+      font-size: 16px;
+      text-align: center;
+      
+
+    }
+   
+
+    .summary-head {
+      border-bottom: 1px solid black;
+      padding-bottom: 10px;
+    
+      border-bottom: 1px solid rgb(101, 100, 100); 
+      text-align: left;
+      h2{
+        margin-left: 15px;
+      }
+      
+    }
+
+    .summary-calculate {
+     
+      p, span, h4 {
+        font-size: 1.2rem; 
+      
+      }
+
+      h4 {
+        font-weight: bold;
+      }
+    }
+  }
+
+  .cart-item {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+    width: 100%;
+    padding: 20px 0 ; 
+    border-bottom: 1px solid #c2c1c1; 
   
-      img {
-        width: 100px;
-        height: 100px;
-        object-fit: cover;
-        border-radius: 5px;
+    &:last-child {
+      border-bottom: none; 
+    }
+  
+    img {
+      width: 100px;
+      height: 90px;
+      object-fit: cover;
+      border-radius: 5px;
+    }
+  
+    .cart-item-details {
+      text-align: left;
+      width: 100%;
+      line-height: 30px;
+  
+      h3 {
+        margin: 0;
+        font-size: 1.2rem;
       }
   
-      .cart-item-details {
-       
-        text-align: left;
-        
+      p {
+        margin: 5px 0;
+        font-size: 1.2rem;
+      }
   
-        h3 {
-          margin: 0;
-          font-size: 1.2rem;
+      .quantity-controls {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+  
+        button {
+          width: 40px;
+          height: 40px;
+          font-size: 1.5rem;
+          border: 1px solid #ddd;
+          background: none;
+          border-radius: 5px;
+          cursor: pointer;
+  
+          &:hover {
+            background: #f5f5f5;
+          }
         }
   
-        p {
-          margin: 5px 0;
-          font-size: 1rem;
-        }
-  
-        .quantity-controls {
-          display: flex;
-          align-items: center;
-          gap: 10px;
-  
-          button {
-            width: 30px;
-            height: 30px;
-            font-size: 1.2rem;
-            border: 1px solid #ddd;
-            background: none;
-            border-radius: 5px;
-            cursor: pointer;
-  
-            &:hover {
-              background: #f5f5f5;
-            }
-          }
-  
-          span {
-            font-size: 1.2rem;
-          }
+        span {
+          font-size: 1.5rem;
         }
       }
     }
   }
   
+}
